== changelog.txt ==
= 1.0.6 =
* Fixed meta box bug on entry view when no feeds have been added

= 1.0.5 =
* Added option to show custom button to account users only
* Fixed user id field showing up even if deselected in feed settings

= 1.0.4 =
* Added option for custom button with merge tag support
* Added option for turning buttons on and off
* Added message field with merge tag support
* Added media uploader to site logo
* Fixed checkbox values not showing up properly
* Fixed radio button results to show text instead of values
* Added support for str_ends_with() for php < 8.0

= 1.0.3 =
* Added option to hide fields on Teams message that have empty values
* Fixed form fields not showing on feed settings until saved
* Animated light/dark mode preview on plugin settings
* Limited character count for site name to prevent issues
* Added feed name and channel to entry notes
* Removed colons from labels if they end with colons or question marks

= 1.0.2 =
* Fixed name field

= 1.0.1 =
* Created this plugin on March 14, 2023