@@ -1,9 +1,9 @@
 <?php
 /**
  * Plugin Name:         Add-On for Microsoft Teams and Gravity Forms
- * Plugin URI:          https://github.com/apos37/gf-msteams
+ * Plugin URI:          https://apos37.com/wordpress-addon-for-ms-teams-gravity-forms/
  * Description:         Send Gravity Form entries to Microsoft Teams channel
- * Version:             1.0.5
+ * Version:             1.0.6
  * Requires at least:   5.9.0
  * Tested up to:        6.1.1
  * Author:              Apos37
@@ -24,7 +24,7 @@ if ( !defined( 'ABSPATH' ) ) {
  */
 define( 'MSTEAMS_NAME', 'Add-On for Microsoft Teams and Gravity Forms' );
 define( 'MSTEAMS_TEXTDOMAIN', 'gf-msteams' );
-define( 'MSTEAMS_VERSION', '1.0.5' );
+define( 'MSTEAMS_VERSION', '1.0.6' );
 define( 'MSTEAMS_PLUGIN_ROOT', plugin_dir_path( __FILE__ ) );                                                   // /home/.../public_html/wp-content/plugins/gf-msteams/
 define( 'MSTEAMS_PLUGIN_DIR', plugins_url( '/'.MSTEAMS_TEXTDOMAIN.'/' ) );                                      // https://domain.com/wp-content/plugins/gf-msteams/
 define( 'MSTEAMS_SETTINGS_URL', admin_url( 'admin.php?page=gf_settings&subview='.MSTEAMS_TEXTDOMAIN ) );        // https://domain.com/wp-admin/admin.php?page=gf_settings&subview=gf-msteams/
@@ -77,7 +77,7 @@ function msteams_plugin_row_meta( $links, $file ) {
 
         // Add the link
         $row_meta = [
-            // 'docs' => '<a href="'.esc_url( 'https://apos37.com/' ).'" target="_blank" aria-label="'.esc_attr__( 'Plugin Website Link', 'gf-msteams' ).'">'.esc_html__( 'Website', 'gf-msteams' ).'</a>',
+            'docs' => '<a href="'.esc_url( 'https://apos37.com/wordpress-addon-for-ms-teams-gravity-forms/' ).'" target="_blank" aria-label="'.esc_attr__( 'Plugin Website Link', 'gf-msteams' ).'">'.esc_html__( 'Website', 'gf-msteams' ).'</a>',
             'discord' => '<a href="'.esc_url( 'https://discord.gg/VeMTXRVkm5' ).'" target="_blank" aria-label="'.esc_attr__( 'Plugin Support on Discord', 'gf-msteams' ).'">'.esc_html__( 'Discord Support', 'gf-msteams' ).'</a>'
         ];
         return array_merge( $links, $row_meta );
